--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "sft/FastChat"]
 	path = sft/FastChat
 	url = https://github.com/PageIV/FastChat.git
+[submodule "quantization/AutoGPTQ"]
+	path = quantization/AutoGPTQ
+	url = https://github.com/PanQiWei/AutoGPTQ.git
+[submodule "serving/TGI"]
+	path = serving/TGI
+	url = https://github.com/huggingface/text-generation-inference.git
